@@ -8,6 +8,7 @@ import ua.dtsebulia.inventoryservice.model.Inventory;
 import ua.dtsebulia.inventoryservice.repository.InventoryRepository;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,7 +24,7 @@ public class InventoryService {
                             .skuCode(inventory.getSkuCode())
                             .isInStock(inventory.getQuantity() > 0)
                             .build()
-                ).toList();
+                ).collect(Collectors.toList());
     }
 
 }
